tests/baselines/reference/classWithOverloadImplementationOfWrongName.errors.txt
classWithOverloadImplementationOfWrongName.ts(4,5): error TS2389: Function implementation name must be 'foo'.


==== classWithOverloadImplementationOfWrongName.ts (1 errors) ====
    class C {
        foo(): string;
        foo(x): number;
        bar(x): any { }
        ~~~
!!! error TS2389: Function implementation name must be 'foo'.
    }